# remote-monitoring

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  LICENSE  README.md  app.py  app2.py  common.py  constants.py  db.py  docker-compose.yml  local_db.py  notes.txt  requirements.txt  setup.py
blueprints/black_box/: black_box.py
blueprints/experiments/: experiments.py
remote_monitoring/: app.py  black_box_utils.py  common.py  constants.py  db.py  init_config_db.py  zyre_communicator.py
remote_monitoring/blueprints/black_box/: black_box.py
remote_monitoring/blueprints/central_operator_console/: central_operator_console.py
remote_monitoring/blueprints/component_management/: component_management.py
remote_monitoring/blueprints/component_monitoring_config/: component_monitoring_config.py
remote_monitoring/blueprints/experiments/: experiments.py
remote_monitoring/blueprints/real_time_monitoring/: real_time_monitoring.py
remote_monitoring/blueprints/ropod_status/: robot_status.py  ropod_status.py
remote_monitoring/blueprints/task_scheduling/: task_scheduling.py
remote_monitoring/config/: init_config.yaml
remote_monitoring/static/custom/css/: style.css
remote_monitoring/static/custom/js/: bb_grid_data_table_widget.js  bb_simple_data_table_widget.js  graph.js  plot.js
remote_monitoring/static/renderjson/: renderjson.css
remote_monitoring/templates/: black_box.html  central_operator_console.html  component_management.html  component_monitoring_config.html  index.html  layout.html  real_time_monitoring.html  remote_experiments.html  robot_status.html  ropod_info.html  ropod_query_result.html  run_experiment.html  schedule_task.html
remote_monitoring/test/: robot_pose_dummy_pub.py
remote_monitoring/zyre/include/: zyre_listener.hpp
remote_monitoring/zyre/src/: zyre_listener.cpp
static/custom/js/: plot.js
templates/: add_ropod (copy).html  add_ropod.html  download.html  edit_ropod.html  index.html  index_V1.html  layout.html  manage_ropods.html  ropod_info.html  ropod_query_result.html  run_experiment.html  schedule_task.html
templates/ropod_crud/: add_ropod.html  delete_ropod.html  update_ropod.html
tmp_downloaded_data/: test_file.json
zyre/: cmake_install.cmake
zyre/black_box/: receiver.py  sender.py
zyre/black_box_demo/: receiver.py  sender.py
zyre/include/: zyre_listener.hpp
zyre/include/config/: config_params.hpp
zyre/pyre/: create_mongoDB.py  receiver.py  sender.py
zyre/pyzmq_example_code/: zmq_client_data_test.py  zmq_client_new.py  zmq_client_old.py  zmq_client_test.py  zmq_server_test.py
zyre/src/: zyre_listener.cpp  zyre_listener_main.cpp
zyre/zyre/zyre_example_code/: CMakeLists.txt  data.json  zyre_listener.cpp  zyre_listener_V3.cpp  zyre_listener_V4.cpp  zyre_listener_not_complete.cpp
zyre/zyre/zyre_example_code/include/: zyre_listener.hpp
zyre/zyre/zyre_example_code/src/: event.cpp  exception.cpp  node.cpp  zyre_listener.cpp  zyre_listener_main.cpp
zyre/zyre_python_binding/bindings/python/: import_test_python.py
zyre/zyre_python_binding/bindings/python_cffi/: import_test_python_cffi.py
zyre/zyre_python_binding/bindings/python_cffi/__pycache__/: _cffi__xe33265ddx954aa029.c
zyre/zyre_python_binding/cpp/: blackbox_cpp_node.cpp  cpp_test_node.cpp  cpp_test_node2.cpp
